--- a/src/components/UserComponents/LeftSideBar/index.scss
+++ b/src/components/UserComponents/LeftSideBar/index.scss
@@ -6,6 +6,12 @@
   position: sticky;
   top: 0;
 
+  .logo {
+    height: 60px;
+    margin-top: 12px;
+    padding: 12px;
+  }
+
   @media (max-width: 992px) {
     display: none;
   }
