--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -4,6 +4,8 @@
   --text-color-secondary: #71767b;
   --border-color: #303336;
   --border-color-secondary: #FEBCC9;
+  //--border-color-secondary: #ffffff;
+  --hover-color: #181818;
 }
 
 :root[data-theme='dark'] {
