--- a/src/components/UserComponents/LeftSideBar/index.scss
+++ b/src/components/UserComponents/LeftSideBar/index.scss
@@ -23,7 +23,15 @@
     gap: 16px;
     font-size: calc(1rem + 4px);
     font-weight: 500;
-    padding: 0 12px;
+    padding: 0 20px 0 12px;
+    cursor: pointer;
+    width: max-content;
+    border-radius: 100px;
+    transition: all .2s ease;
+
+    &:hover {
+      background-color: var(--hover-color);
+    }
 
     .icon {
       font-size: 25px;
