--- a/src/index.scss
+++ b/src/index.scss
@@ -19,9 +19,15 @@ html {
   font-size: 16px;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 685px) {
   html {
-    font-size: 14px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 400px) {
+  html {
+    font-size: 15px;
   }
 }
 
