--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -6,6 +6,10 @@
   --border-color-secondary: #FEBCC9;
   //--border-color-secondary: #ffffff;
   --hover-color: #181818;
+  --input-bg-color: #202327;
+  --scrollbar-track: #111;
+  --scrollbar-thumb: #444;
+  --scrollbar-thumb-hover: #666;
 }
 
 :root[data-theme='dark'] {
