--- a/src/components/UserComponents/Card/index.scss
+++ b/src/components/UserComponents/Card/index.scss
@@ -81,6 +81,7 @@
     overflow: hidden;
     font-size: calc(1rem - 2px);
     margin: 4px 0 8px;
+    line-height: calc(1rem - 2px + ((1rem - 2px) / 2));
   }
 
   .contentGrid {
